Change DegreeType to DegreeProgram

--- a/finalproject/finalproject.vcxproj
+++ b/finalproject/finalproject.vcxproj
@@ -139,7 +139,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="roaster.cpp" />
+    <ClCompile Include="roster.cpp" />
     <ClCompile Include="student.cpp" />
   </ItemGroup>
   <ItemGroup>
